--- a/src/components/navBar/Header.css
+++ b/src/components/navBar/Header.css
@@ -4,6 +4,7 @@
     align-items: center;
     position: sticky;
     top:0;
+    z-index: 100;
 }
 .header__logo{
     margin: 0 20px;
@@ -18,7 +19,7 @@
 }
 .header__searchInput{
     width: 100%;
-    height: 20px;
+    height: 30px;
     padding: 10px;
     border: none;
     border-top-left-radius: 5px;
@@ -44,6 +45,15 @@
     display:flex;
     flex-direction: column;
     margin: 0 10px;
+    align-items: center;
+}
+.header__optionFlag{
+    margin: 0 10px;
+    display: flex;
+    align-items: center;
+    /* border:1px solid red; */
+    object-fit: contain;
+
 }
 .header__option span:first-child{
     font-size: 12px;
