--- a/src/components/singeCardProduct/singleCardProduct.css
+++ b/src/components/singeCardProduct/singleCardProduct.css
@@ -1,12 +1,11 @@
 .singleProduct img{
-    height: 250px !important;
-    width: 100% !important;
+    height: 270px ;
     object-fit: cover;
 }
 
 @media(min-width:992px){ 
     .singleProduct img{
-        height: 285px !important;
+        height: 270px !important;
         width: 100% !important;
         object-fit: cover;
     }
